--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,63 +12,254 @@
   <title>Free Resume Page Template with Bulma CSS by Irfan Maulana</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.1/css/bulma.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-25065548-2"></script>
-	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-25065548-2');</script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+  <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25065548-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-25065548-2');
+  </script>
 
   <!-- GOOGLE ADS -->
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-5442972248172818",
-    enable_page_level_ads: true
-  });
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5442972248172818",
+      enable_page_level_ads: true
+    });
   </script>
 
 </head>
 
 <body>
 
+  <header class="line has-background-info"></header>
+
+  <section class="profile section">
+    <div class="container">
+      <div class="columns">
+        <div class="column is-two-fifths">
+          <h1 class="title is-size-1">
+            Your Name
+          </h1>
+          <p class="subtitle">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit
+          </p>
+        </div>
+        <div class="column is-2">
+          <figure class="image image is-128x128">
+            <img class="is-rounded" src="https://avatars2.githubusercontent.com/u/7221389?s=128&v=4">
+          </figure>
+        </div>
+        <div class="column has-text-grey-light has-text-right">
+          <p class="has-text-weight-light">
+            123 Your Street
+          </p>
+          <p class="has-text-weight-light">
+            Your City, ST 12345
+          </p>
+          <p class="has-text-weight-light">
+            (123) 456-7890
+          </p>
+          <p class="has-text-weight-light">
+            no_reply@example.com
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="hr"></div>
+
+  <section class="section">
+    <div class="container">
+      <div class="columns">
+        <div class="column is-three-fifths">
+          <div class="summary">
+            <div class="title is-size-5 has-text-info has-text-weight-bold">SUMMARY</div>
+            <div class="wrapper">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </div>
+          </div>
+
+          <div class="experience">
+            <div class="title is-size-5 has-text-info has-text-weight-bold">EXPERIENCE</div>
+
+            <div class="item">
+              <div class="">Company, Location — Job Title</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+            <div class="item">
+              <div class="">Company, Location — Job Title</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+            <div class="item">
+              <div class="">Company, Location — Job Title</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+          </div>
+
+          <div class="education">
+            <div class="title is-size-5 has-text-info has-text-weight-bold">EDUCATION</div>
+            <div class="item">
+              <div class="">School Name, Location — Degree</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+            <div class="item">
+              <div class="">School Name, Location — Degree</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+            <div class="item">
+              <div class="">School Name, Location — Degree</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+          </div>
+
+          <div class="projects">
+            <div class="title is-size-5 has-text-info has-text-weight-bold">PROJECTS</div>
+
+            <div class="item">
+              <div class="">Project Name — Detail</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+            <div class="item">
+              <div class="">Project Name — Detail</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+            <div class="item">
+              <div class="">Project Name — Detail</div>
+              <div>MONTH 20XX - PRESENT</div>
+              <div>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="skills">
+            <div class="title is-size-5 has-text-info has-text-weight-bold">SKILLS</div>
+            <div class="wrapper">
+              <progress class="progress is-info is-small" value="90" max="100">90%</progress>
+              <progress class="progress is-info is-small" value="85" max="100">85%</progress>
+              <progress class="progress is-info is-small" value="70" max="100">70%</progress>
+              <progress class="progress is-info is-small" value="50" max="100">50%</progress>
+            </div>
+          </div>
+          <div class="awards">
+            <div class="title is-size-5 has-text-info has-text-weight-bold">AWARDS</div>
+            <div class="item">
+              <div class="">Lorem ipsum dolor sit amet Consectetuer adipiscing elit, Sed diam nonummy</div>
+            </div>
+            <div class="item">
+              <div class="">Nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+            </div>
+            <div class="item">
+              <div class="">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                  fugiat nulla pariatur.</div>
+            </div>
+            <div class="item">
+              <div class="">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</div>
+            </div>
+          </div>
+          <div class="languages">
+            <div class="title is-size-5 has-text-info has-text-weight-bold">LANGUAGES</div>
+            <div class="wrapper">
+                Lorem ipsum, Dolor sit amet, Consectetuer
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="line has-background-info"></footer>
+
   <!-- GOOGLE ADS -->
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
+  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485"
+    data-ad-format="auto"></ins>
   <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
+    (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
-  <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","url":"https://www.mazipan.github.io/","name":"Irfan Maulana | Front End Developer","author":"Irfan Maulana","image":"http://mazipan.github.io/images/irfan-maulana.jpg","description":"Irfan Maulana is Front End Developer from Indonesia - Man that craft some code to build a beauty and readable code, experienced in web and desktop technology.","sameAs":["https://www.facebook.com/mazipanneh","https://instagram.com/maz_ipan","https://twitter.com/Maz_Ipan","https://id.linkedin.com/in/irfanmaulanamazipan","https://www.slideshare.net/IrfanMaulana21","https://github.com/mazipan"]}</script> <script type="application/ld+json">{"@context":"http://schema.org","@type":"Person","email":"mailto:mazipanneh@gmail.com","image":"http://mazipan.github.io/images/irfan-maulana.jpg","jobTitle":"Software Engineer","name":"Irfan Maulana","url":"https://www.mazipan.github.io/","sameAs":["https://www.facebook.com/mazipanneh","https://instagram.com/maz_ipan","https://twitter.com/Maz_Ipan","https://id.linkedin.com/in/irfanmaulanamazipan","https://www.slideshare.net/IrfanMaulana21","https://github.com/mazipan"]}</script>
   <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "BreadcrumbList",
-    "itemListElement": [{
-      "@type": "ListItem",
-      "position": 1,
-      "item": {
-        "@id": "http://mazipan.github.io/",
-        "name": "Home",
-        "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
-      }
-    }, {
-      "@type": "ListItem",
-      "position": 2,
-      "item": {
-        "@id": "http://mazipan.github.io/demo/",
-        "name": "Demo",
-        "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
-      }
-    }, {
-      "@type": "ListItem",
-      "position": 3,
-      "item": {
-        "@id": "http://mazipan.github.io/bulma-resume-template",
-        "name": "bulma-resume-template",
-        "image": "https://mazipan.github.io/bulma-resume-template/logo.png"
-      }
-    }]
-  }
+    {
+      "@context": "http://schema.org",
+      "@type": "WebSite",
+      "url": "https://www.mazipan.github.io/",
+      "name": "Irfan Maulana | Front End Developer",
+      "author": "Irfan Maulana",
+      "image": "http://mazipan.github.io/images/irfan-maulana.jpg",
+      "description": "Irfan Maulana is Front End Developer from Indonesia - Man that craft some code to build a beauty and readable code, experienced in web and desktop technology.",
+      "sameAs": ["https://www.facebook.com/mazipanneh", "https://instagram.com/maz_ipan",
+        "https://twitter.com/Maz_Ipan", "https://id.linkedin.com/in/irfanmaulanamazipan",
+        "https://www.slideshare.net/IrfanMaulana21", "https://github.com/mazipan"
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "email": "mailto:mazipanneh@gmail.com",
+      "image": "http://mazipan.github.io/images/irfan-maulana.jpg",
+      "jobTitle": "Software Engineer",
+      "name": "Irfan Maulana",
+      "url": "https://www.mazipan.github.io/",
+      "sameAs": ["https://www.facebook.com/mazipanneh", "https://instagram.com/maz_ipan",
+        "https://twitter.com/Maz_Ipan", "https://id.linkedin.com/in/irfanmaulanamazipan",
+        "https://www.slideshare.net/IrfanMaulana21", "https://github.com/mazipan"
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@id": "http://mazipan.github.io/",
+          "name": "Home",
+          "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
+        }
+      }, {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@id": "http://mazipan.github.io/demo/",
+          "name": "Demo",
+          "image": "http://mazipan.github.io/images/irfan-maulana.jpg"
+        }
+      }, {
+        "@type": "ListItem",
+        "position": 3,
+        "item": {
+          "@id": "http://mazipan.github.io/bulma-resume-template",
+          "name": "bulma-resume-template",
+          "image": "https://mazipan.github.io/bulma-resume-template/logo.png"
+        }
+      }]
+    }
   </script>
 </body>
 
