reverse media rules for browser print

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -69,7 +69,7 @@
             <img class="is-rounded" src="https://avatars2.githubusercontent.com/u/7221389?s=128&v=4">
           </figure>
         </div>
-        <div class="column has-text-grey-light has-text-right-in-desktop">
+        <div class="column has-text-grey-light has-text-right has-text-centered-mobile">
           <p class="has-text-weight-light">
             123 Your Street
           </p>
