chore: change screenshoot

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,6 +64,9 @@ body {
   .profile {
     text-align: center;
   }
+  .social-icon{
+    justify-content: center;
+  }
 }
 
 /* Query for desktop only*/
