--- a/src/index.ejs
+++ b/src/index.ejs
@@ -269,7 +269,7 @@
 
     <footer class="footer">
         <div class="content has-text-centered">
-            Copyright © 2019 By Irfan Maulana
+            Copyright © 2018-2019 By Irfan Maulana
         </div>
     </footer>
 
