--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,17 +9,17 @@
 
     <meta name="language" content="en-EN" />
     <meta name="author" content="Irfan Maulana" />
-    <title>Bulma Resume Template - Free Resume Page Template with Bulma CSS by Irfan Maulana</title>
-    <meta name="description" content="Free Resume Page Template with Bulma CSS by Irfan Maulana">
+    <title>Bulma Resume Template</title>
+    <meta name="description" content="Free Resume/CV Page Template with Bulma CSS by Irfan Maulana">
 
     <meta property="og:title" content="Bulma Resume Template">
-    <meta property="og:description" content="Free Resume Page Template with Bulma CSS by Irfan Maulana">
+    <meta property="og:description" content="Free Resume/CV Page Template with Bulma CSS by Irfan Maulana">
 
     <meta name="twitter:title" content="Bulma Resume Template">
-    <meta name="twitter:description" content="Free Resume Page Template with Bulma CSS by Irfan Maulana">
+    <meta name="twitter:description" content="Free Resume/CV Page Template with Bulma CSS by Irfan Maulana">
 
     <link rel="icon" type="image/png" sizes="16x16" href="https://mazipan.github.io/favicon/favicon-16x16.png">
-    <meta name="theme-color" content="#209cee">
+    <meta name="theme-color" content="#bd93f9">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
