--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,15 +24,15 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-25065548-2"></script>
-	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-25065548-2');</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25065548-2"></script>
+    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-25065548-2');</script>
 
     <!-- GOOGLE ANALYTICS AND FRIENDS -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({
       google_ad_client: "ca-pub-5442972248172818",
-
+      enable_page_level_ads: true
     });
     </script>
 
@@ -270,20 +270,12 @@
 
     <footer class="line has-background-primary"></footer>
 
-     <!-- GOOGLE ANALYTICS AND FRIENDS -->
-    
-    
+    <!-- GOOGLE ANALYTICS AND FRIENDS -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
-     data-ad-format="fluid"
-     data-ad-client="ca-pub-5442972248172818"
-     data-ad-slot="7974047383"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-   
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
     <script type="application/ld+json">
         { "@context": "http://schema.org", "@type": "WebSite", "url": "https://www.mazipan.github.io/", "name": "Irfan Maulana | Front End Developer", "author": "Irfan Maulana", "image": "http://mazipan.github.io/images/irfan-maulana.jpg", "description": "Irfan Maulana is Front End Developer from Indonesia - Man that craft some code to build a beauty and readable code, experienced in web and desktop technology.", "sameAs": ["https://www.facebook.com/mazipanneh", "https://instagram.com/maz_ipan", "https://twitter.com/Maz_Ipan", "https://id.linkedin.com/in/irfanmaulanamazipan", "https://www.slideshare.net/IrfanMaulana21", "https://github.com/mazipan" ] }
