--- a/src/index.ejs
+++ b/src/index.ejs
@@ -27,15 +27,6 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25065548-2"></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-25065548-2');</script>
 
-    <!-- GOOGLE ANALYTICS AND FRIENDS -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-5442972248172818",
-      enable_page_level_ads: true
-    });
-    </script>
-
     <style>
         .github-corner:hover .octo-arm {
             animation: octocat-wave 560ms ease-in-out
@@ -272,7 +263,13 @@
 
     <!-- GOOGLE ANALYTICS AND FRIENDS -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
+    <!-- Dracula Responsive -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5442972248172818"
+         data-ad-slot="3751487419"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
