Update style Ads

--- a/src/light.ejs
+++ b/src/light.ejs
@@ -254,7 +254,7 @@
 	
     <!-- GOOGLE ADS -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
+    <ins class="adsbygoogle" style="display: block; margin: 0 auto 1em; text-align: center;" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
