--- a/src/index.ejs
+++ b/src/index.ejs
@@ -250,7 +250,15 @@
             </div>
         </div>
     </section>
-
+ 
+    <!-- GOOGLE ADS -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle" style="display: block; margin: 0 auto 1em; text-align: center;" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!-- GOOGLE ADS -->
+    
     <footer class="footer">
         <div class="content has-text-centered">
             <a href="light.html">See Light Theme</a>
@@ -260,19 +268,6 @@
     </footer>
 
     <footer class="line has-background-primary"></footer>
-
-    <!-- GOOGLE ANALYTICS AND FRIENDS -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Dracula Responsive -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5442972248172818"
-         data-ad-slot="3751487419"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
 
     <script type="application/ld+json">
         { "@context": "http://schema.org", "@type": "WebSite", "url": "https://www.mazipan.github.io/", "name": "Irfan Maulana | Front End Developer", "author": "Irfan Maulana", "image": "http://mazipan.github.io/images/irfan-maulana.jpg", "description": "Irfan Maulana is Front End Developer from Indonesia - Man that craft some code to build a beauty and readable code, experienced in web and desktop technology.", "sameAs": ["https://www.facebook.com/mazipanneh", "https://instagram.com/maz_ipan", "https://twitter.com/Maz_Ipan", "https://id.linkedin.com/in/irfanmaulanamazipan", "https://www.slideshare.net/IrfanMaulana21", "https://github.com/mazipan" ] }
