--- a/src/index.ejs
+++ b/src/index.ejs
@@ -251,13 +251,13 @@
         </div>
     </section>
  
-    <!-- GOOGLE ADS -->
+    <!-- GOOGLE ADS
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle" style="display: block; margin: 0 auto 1em; text-align: center;" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    <!-- GOOGLE ADS -->
+    GOOGLE ADS -->
     
     <footer class="footer">
         <div class="content has-text-centered">
