--- a/src/index.ejs
+++ b/src/index.ejs
@@ -278,6 +278,19 @@
     <script type="application/ld+json">
         { "@context": "http://schema.org", "@type": "BreadcrumbList", "itemListElement": [{ "@type": "ListItem", "position": 1, "item": { "@id": "http://mazipan.github.io/", "name": "Home", "image": "http://mazipan.github.io/images/irfan-maulana.jpg" } }, { "@type": "ListItem", "position": 2, "item": { "@id": "http://mazipan.github.io/demo/", "name": "Demo", "image": "http://mazipan.github.io/images/irfan-maulana.jpg" } }, { "@type": "ListItem", "position": 3, "item": { "@id": "http://mazipan.github.io/bulma-resume-template", "name": "bulma-resume-template", "image": "https://mazipan.github.io/bulma-resume-template/logo.png" } }] }
     </script>
+    
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Responsive Ads -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5442972248172818"
+         data-ad-slot="6305953167"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    
 </body>
 
 </html>
