--- a/src/index.ejs
+++ b/src/index.ejs
@@ -250,15 +250,15 @@
             </div>
         </div>
     </section>
- 
-    <!-- GOOGLE ADS
+
+    <!-- GOOGLE ADS -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle" style="display: block; margin: 0 auto 1em; text-align: center;" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    GOOGLE ADS -->
-    
+    <!-- GOOGLE ADS -->
+
     <footer class="footer">
         <div class="content has-text-centered">
             <a href="light.html">See Light Theme</a>
@@ -278,7 +278,7 @@
     <script type="application/ld+json">
         { "@context": "http://schema.org", "@type": "BreadcrumbList", "itemListElement": [{ "@type": "ListItem", "position": 1, "item": { "@id": "http://mazipan.github.io/", "name": "Home", "image": "http://mazipan.github.io/images/irfan-maulana.jpg" } }, { "@type": "ListItem", "position": 2, "item": { "@id": "http://mazipan.github.io/demo/", "name": "Demo", "image": "http://mazipan.github.io/images/irfan-maulana.jpg" } }, { "@type": "ListItem", "position": 3, "item": { "@id": "http://mazipan.github.io/bulma-resume-template", "name": "bulma-resume-template", "image": "https://mazipan.github.io/bulma-resume-template/logo.png" } }] }
     </script>
-    
+
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Responsive Ads -->
     <ins class="adsbygoogle"
@@ -290,7 +290,7 @@
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    
+
 </body>
 
 </html>
