--- a/src/light.ejs
+++ b/src/light.ejs
@@ -59,7 +59,7 @@
     </style>
 </head>
 
-<body>
+<body id="body-app">
     <a href="https://github.com/mazipan/bulma-resume-template" class="github-corner" aria-label="View source on GitHub">
         <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#00d1b2; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
             <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
@@ -251,7 +251,7 @@
             </div>
         </div>
     </section>
-	
+
     <!-- GOOGLE ADS -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle" style="display: block; margin: 0 auto 1em; text-align: center;" data-ad-client="ca-pub-5442972248172818" data-ad-slot="1487770485" data-ad-format="auto"></ins>
@@ -259,7 +259,7 @@
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
     <!-- GOOGLE ADS -->
-    
+
     <footer class="footer">
         <div class="content has-text-centered">
             <a href="index.html">See Dark Theme</a>
