--- a/src/index.ejs
+++ b/src/index.ejs
@@ -129,8 +129,13 @@
                         <div class="title is-size-5 has-text-primary has-text-weight-bold">EXPERIENCE</div>
 
                         <div class="item">
+                            <div class="is-size-5"><b>Tokopedia,</b> <span class="has-text-weight-semi-bold">Jakarta — <i>Principal Engineer for Frontend</i></span></div>
+                            <div class="is-size-7">JUN 2019 - PRESENT</div>
+                        </div>
+                        
+                        <div class="item">
                             <div class="is-size-5"><b>Bizzy Indonesia,</b> <span class="has-text-weight-semi-bold">Jakarta — <i>Software Architect</i></span></div>
-                            <div class="is-size-7">FEB 2019 - PRESENT</div>
+                            <div class="is-size-7">FEB 2019 - JUN-2019</div>
                             <div>
                                 <ul style="list-style: disc;margin-left: 1em;">
                                     <li>Split monolith frontend codebase into some different repository (will do more in the future)</li>
@@ -141,6 +146,7 @@
                                 </ul>
                             </div>
                         </div>
+                        
                         <div class="item">
                             <div class="is-size-5"><b>Bizzy Indonesia,</b> <span class="has-text-weight-semi-bold">Jakarta — <i>Software Development Engineer</i></span></div>
                             <div class="is-size-7">JUL 2018 - FEB 2019</div>
@@ -151,6 +157,7 @@
                                 </ul>
                             </div>
                         </div>
+                        
                         <div class="item">
                             <div class="is-size-5"><b>Global Digital Niaga (Blibli.com),</b> <span class="has-text-weight-semi-bold">Jakarta — <i>Sr. Software Development Engineer</i></span></div>
                             <div class="is-size-7">JAN 2017 - JUN 2018</div>
