--- a/src/index.ejs
+++ b/src/index.ejs
@@ -75,7 +75,7 @@
                         Irfan Maulana
                     </h1>
                     <p class="subtitle">
-                        Software Architect at Bizzy Indonesia
+                        Principal Enginner for Frontend at Tokopedia
                     </p>
                 </div>
                 <div class="column is-2">
