This fixes lack of alt which will up SEO rank

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column is-2">
                     <figure class="image image is-128x128">
-                        <img class="is-rounded" src="<%= content.profile.photo %>">
+                        <img alt='Profile photo' class="is-rounded" src="<%= content.profile.photo %>">
                     </figure>
                 </div>
                 <div class="column has-text-grey-light has-text-right-in-desktop">
