--- a/src/light-style.scss
+++ b/src/light-style.scss
@@ -1,6 +1,11 @@
 $theme: #00d1b2;
 $grey: #b5b5b5;
 
+:root {
+  --theme-color: #00d1b2;
+  --thin-color: #b5b5b5;
+}
+
 @import "~bulma/bulma";
 
 body {
