--- a/src/index.ejs
+++ b/src/index.ejs
@@ -220,7 +220,7 @@
         <div class="content has-text-centered">
             <a href="light.html">See Light Theme</a>
             <br>
-            Copyright © 2018-2019 by Irfan Maulana
+            Copyright © 2018-2019 by <a href="https://mazipan.space">Irfan Maulana</a>
         </div>
     </footer>
 
