--- a/src/light.ejs
+++ b/src/light.ejs
@@ -221,7 +221,7 @@
         <div class="content has-text-centered">
             <a href="index.html">See Dark Theme</a>
             <br>
-            Copyright © 2018-2019 by Irfan Maulana
+            Copyright © 2018-2019 by <a href="https://mazipan.space">Irfan Maulana</a>
         </div>
     </footer>
 
